# python_proj_template

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/project_name/: __init__.py  _standalone_setup.py  example_logging.py  key_cert_load.py  logging_setup.py
src/project_name/zzz_example_module/: __init__.py  _standalone_setup.py  example_code_file.py
